--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,7 +7,8 @@ plugins {
 
 android {
     namespace = "com.example.prac"
-    compileSdk = flutter.compileSdkVersion
+    // compileSdk = flutter.compileSdkVersion
+    compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
